# FreeMat

./: CMakeLists.txt  ChangeLog  HowToRelease.TXT  README.md  README.rmd
images/: Makefile.am
libs/libCore/: Abs.cpp  Analyze.cpp  Array.cpp  Audio.cpp  Binary.cpp  CMakeLists.txt  Cast.cpp  Ceil.cpp  Cell.cpp  Clear.cpp  Conj.cpp  Constants.cpp  Control.cpp  Conv.cpp  Cstruct.cpp  CumProd.cpp  CumSum.cpp  Debug.cpp  Directory.cpp  Dot.cpp  Eigen.cpp  Error.cpp  Eval.cpp  Exist.cpp  FFT.cpp  File.cpp  Find.cpp  Floor.cpp  Help.cpp  Hex.cpp  IO.cpp  Image.cpp  Inspect.cpp  Is.cpp  LU.cpp  MatIO.cpp  MatIO.hpp  Matrix.cpp  Max.cpp  Mean.cpp  (+38 more)
libs/libFN/: CMakeLists.txt  FN.hpp  FNFun.cpp  Interp1D.cpp  Interp2D.cpp  LoadFN.cpp  LoadFN.hpp  OptFun.cpp  fdlibm.h  mathfunc.cpp  mathfunc2.cpp  mathfunc3.cpp  mathfunc4.cpp  mathfunc5.cpp  mathfunc5.hpp  minpack_license.txt
libs/libFreeMat/: Algorithms.cpp  Algorithms.hpp  AnonFunc.cpp  AnonFunc.hpp  Array.cpp  Array.hpp  ArrayPrivate.hpp  BasicArray.hpp  CMakeLists.txt  Cast.hpp  Class.cpp  Class.hpp  CommonIterator.hpp  Compiler.cpp  Compiler.hpp  Complex.hpp  Context.cpp  Context.hpp  DebugStream.cpp  DebugStream.hpp  EigenDecompose.cpp  EigenDecompose.hpp  Exception.cpp  Exception.hpp  FastList.hpp  File.cpp  File.hpp  FuncPtr.cpp  FuncPtr.hpp  FunctionDef.cpp  FunctionDef.hpp  GetSet.hpp  HandleList.hpp  IEEEFP.cpp  IEEEFP.hpp  IndexArray.cpp  IndexArray.hpp  Interpreter.cpp  Interpreter.hpp  LAPACK.cpp  (+48 more)
libs/libGraphics/: CMakeLists.txt  GLLabel.cpp  GLLabel.hpp  GLRenderEngine.cpp  GLRenderEngine.hpp  GLWindow.cpp  GLWindow.hpp  HandleAxis.cpp  HandleAxis.hpp  HandleCommands.cpp  HandleCommands.hpp  HandleContour.cpp  HandleContour.hpp  HandleFigure.cpp  HandleFigure.hpp  HandleGUI.hpp  HandleImage.cpp  HandleImage.hpp  HandleLineSeries.cpp  HandleLineSeries.hpp  HandleMultiEdit.cpp  HandleMultiEdit.hpp  HandleObject.cpp  HandleObject.hpp  HandlePatch.cpp  HandlePatch.hpp  HandleProperty.cpp  HandleProperty.hpp  HandleSurface.cpp  HandleSurface.hpp  HandleText.cpp  HandleText.hpp  HandleUIControl.cpp  HandleUIControl.hpp  HandleWindow.cpp  HandleWindow.hpp  Label.cpp  Label.hpp  QTRenderEngine.cpp  QTRenderEngine.hpp  (+10 more)
libs/libXP/: CMakeLists.txt  Common.cpp  Common.hpp  DataTable.cpp  DataTable.hpp  DebugWin.cpp  DebugWin.hpp  DynLib.cpp  DynLib.hpp  Editor.cpp  Editor.hpp  FMFontDialog.cpp  FMFontDialog.hpp  FileTool.cpp  FileTool.hpp  HistoryWidget.cpp  HistoryWidget.hpp  KeyManager.cpp  KeyManager.hpp  PathSearch.cpp  PathSearch.hpp  PathTool.cpp  PathTool.hpp  QTTerm.cpp  QTTerm.hpp  StackTool.cpp  StackTool.hpp  System.cpp  System.hpp  ToolDock.cpp  ToolDock.hpp  VariablesTool.cpp  VariablesTool.hpp  findform.ui  fontform.ui  highlighter.cpp  highlighter.hpp  indentconf.ui  replaceform.ui  synlightconf.ui
src/: CMakeLists.txt  DumbTerminal.cpp  DumbTerminal.hpp  FreeMat.qrc  FuncMode.cpp  FuncMode.hpp  FuncTerminal.cpp  FuncTerminal.hpp  InterpreterThread.cpp  InterpreterThread.hpp  MainApp.cpp  MainApp.hpp  Platform.hpp  ScriptMode.cpp  ScriptMode.hpp  SocketCB.cpp  SocketCB.hpp  Terminal.cpp  Terminal.hpp  appIcon.icns  application.cpp  application.hpp  freemat.rc  main.cpp  run-test
tests/: CMakeLists.txt  sscanf_ref.mat  sscanf_test.m
tests/array/: CMakeLists.txt  test_assign11.m  test_assign12.m  test_assign13.m  test_assign14.m  test_assign17.m  test_assign20.m  test_assign21.m  test_assign22.m  test_assign3.m  test_assign5.m  test_assign9.m  test_diag2.m  test_diag5.m  test_isinteger1.m  test_ones1.m  test_repmat1.m  test_repmat2.m  test_resize1.m  test_resize2.m  test_resize3.m  test_resize4.m  test_resize5.m  test_resize6.m  test_resize7.m  test_resize8.m  test_sort.m  test_sparse21.m  test_sparse56.m  test_sparse63.m  test_sparse64.m  test_sparse65.m  test_sparse66.m  test_sparse68.m  test_sparse70.m  test_sparse72.m  test_zeros1.m
tests/binary/: CMakeLists.txt  test_bitand1.m  test_bitor1.m  test_bitxor1.m
tests/class/: CMakeLists.txt  test_foo_1.m
tests/constants/: CMakeLists.txt
tests/curvefit/: CMakeLists.txt  fitfunc_func1.m  fitfunc_func2.m  test_fitfun3.m
tests/elementary/: CMakeLists.txt  test_test3.m  test_test5.m
tests/flow/: CMakeLists.txt  test_error1.m  test_for4.m  test_if2.m  test_if3.m  test_lasterr1.m  test_switch2.m  test_switch3.m  test_switch4.m  test_switch6.m  test_switch8.m  test_while1.m  test_while3.m  testeq.m
tests/freemat/: CMakeLists.txt  do_jit_test.m  func_jit_test052.m  jit_test001.m  jit_test002.m  jit_test003.m  jit_test004.m  jit_test005.m  jit_test006.m  jit_test007.m  jit_test008.m  jit_test009.m  jit_test010.m  jit_test011.m  jit_test012.m  jit_test013.m  jit_test014.m  jit_test015.m  jit_test016.m  jit_test017.m  jit_test018.m  jit_test019.m  jit_test020.m  jit_test021.m  jit_test022.m  jit_test023.m  jit_test024.m  jit_test025.m  jit_test026.m  jit_test027.m  jit_test028.m  jit_test029.m  jit_test030.m  jit_test031.m  jit_test032.m  jit_test033.m  jit_test034.m  jit_test035.m  jit_test036.m  jit_test037.m  (+21 more)
tests/function/: CMakeLists.txt
tests/functions/: CMakeLists.txt  addtest.m  addtest3.m  euclidlength.m  strcattest.m  test_call4.m  test_fcall1.m  test_fcall2.m  test_fptr1.m  test_nargin2.m  tscript.m  varoutfunc.m
tests/handle/: CMakeLists.txt  test_plot1.m
tests/inspection/: CMakeLists.txt  chain2.m  test_clear1.m  test_exist2.m  test_fieldnames1.m  test_iscellstr1.m  test_iscellstr2.m  test_size2.m  test_size3.m
tests/io/: CMakeLists.txt  sample_data.csv  test_imwrite_imread.m  test_sscanf1.m
tests/itk/: CMakeLists.txt  test_adaptivehistogramequalization1.m  test_binomialblur1.m  test_blacktophat1.m  test_bsplineupsample1.m  test_cannyedgedetector1.m  test_connectedcomponents1.m  test_connectedthreshold1.m  test_curvatureanisotropicdiffusionfilter1.m  test_derivativefilter1.m  test_dilate1.m  test_erode1.m  test_grayscaledilate1.m  test_grayscaledilate2.m  test_grayscaleerode1.m  test_grayscalefillhole1.m  test_grayscalegrindpeak1.m  test_grayscalemorphologicalclosing1.m  test_grayscalemorphologicalopening1.m  test_hconcave1.m  (+21 more)
(+14413 files in other folders)
