EXTRA_DIST = close.png undo.png redo.png copy.png cut.png freemat-2.xpm freemat_small_mod_64.png home.png new.png next.png open.png paste.png player_pause.png player_play.png player_playselection.png player_stop.png help_onselection.png previous.png quit.png save.png zoomin.png zoomout.png find.png stop.png pan.png rotate.png cam_rotate.png dbgnext.png dbgrun.png dbgstep.png

